--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -84,11 +84,18 @@ input {
     &.btn-small {
         height: 24px;
     }
+    &.btn-icon {
+        line-height: unset;
+        border-radius: 3px;
+    }
 
     @include media-breakpoint-down(sm, $grid-breakpoints) {
         height: 36px;
         font-size: 14px;
         padding: 0 20px;
+        &.btn-medium {
+            font-size: 14px;
+        }
     }
 }
 
